Fix service wrapper: widen to 200px to contain input without overflow

--- a/couchpotato/static/style/settings.scss
+++ b/couchpotato/static/style/settings.scss
@@ -557,7 +557,7 @@
 
 	.apprise-service-wrapper {
 		position: relative;
-		width: 180px;
+		width: 200px;
 		flex-shrink: 0;
 
 		@include media-phablet {
